apply unique filter with get_mod refactor and passing in the correct layout and mod.type
Former-commit-id: ff53ca3efb4114b3054b0fe8fca1e2e5091d0346

--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 Next:
 - TEST: right now testing with abbreviated key.
     * CallSpot ln 162, need to generalize to all String types that have more than 50
-- jobsize is an "unsigned int", so why is it's charttype HorizontalBarChart
+    * why sometimes not performance optimized?
 
-DONE - load_compare optimization to optimize checkboxing speed:
+DONE - load_compare optimization to optimize checkboxing speed: etc bucket feature.
     * ChartCollection.js - Line 220 - let's see if we don't need to run load_compare after the first time from here?
 DONE - prevent cmdLine or any other attribute from having more than 100 unique values or so.
 DONE - Do error message for MJ based on the length of URL string.
