duration wall fix cali_fp
Former-commit-id: d0c6a7c957f580f6eacebf5730e7383d1c9adb63

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Next:
+- walltime runId is incorrect: needs to be the name of the cali file.
 - TEST: right now testing with abbreviated key.
     * CallSpot ln 162, need to generalize to all String types that have more than 50
     * why sometimes not performance optimized?
