Edit chart type pop up and bindings plus optional delete button show or hide and submit
Former-commit-id: 28a03309ecce7a75a7e47f192222196b2641a015

--- a/TODO
+++ b/TODO
@@ -25,10 +25,11 @@ Next:
 DONE - Fix Git on my computer: MacPatch messed up my computer really bad.
 DONE - make sure dates have the year.
     * ready to checkin.
+- check to see if we can do hovers for the horizontal bar value
 - Configuration popup for changing things like x-axis and yaxis
     "UNIQUE_STR": 200, ->could be configurable for the popup.
     "MAX_HOR_BAR_CHART_STR_LEN": 100 -> could be configurable for the popup.
-- check to see if we can do hovers for the horizontal bar value
+- Next: Suggest I work on integrating joe's persistence layer into the source code.
 - Joe: URL for Jupyter needs to change?
 - Deal with issue sys.path.append(....)  how to get directory string without duplicating the function?
 - Create a deployment script for hatchet and code deployment to maximize robustness.
