--- a/TODO
+++ b/TODO
@@ -25,7 +25,9 @@ Next:
 DONE - Fix Git on my computer: MacPatch messed up my computer really bad.
 DONE - make sure dates have the year.
 - edit functionality on FE
+    * load correct select dropdown.
 - delete functionality on FE
+    * delete needs to work for scatterPlots.
 - check to see if we can do hovers for the horizontal bar value
 - Configuration popup for changing things like x-axis and yaxis
     "UNIQUE_STR": 200, ->could be configurable for the popup.
