--- a/TODO
+++ b/TODO
@@ -24,15 +24,17 @@ DONE - Send matt the Venv location and commands: Don't need to because we're usi
 Next:
 DONE - Fix Git on my computer: MacPatch messed up my computer really bad.
 DONE - make sure dates have the year.
-- edit functionality on FE
+DONE - edit functionality on FE
     * DONE - load correct select dropdown.
-    * ensure that x-label and y-label are affected when changing them on scatterPlots
+    * DONE - ensure that x-label and y-label are affected when changing them on scatterPlots
+    * DONE - show/hide delete button based on chart type
 DONE - delete functionality on FE
+- Next: Suggest I work on integrating joe's persistence layer into the source code.
+- Do persistence for edits on the BE.
 - check to see if we can do hovers for the horizontal bar value
 - Configuration popup for changing things like x-axis and yaxis
     "UNIQUE_STR": 200, ->could be configurable for the popup.
     "MAX_HOR_BAR_CHART_STR_LEN": 100 -> could be configurable for the popup.
-- Next: Suggest I work on integrating joe's persistence layer into the source code.
 - Joe: URL for Jupyter needs to change?
 - Deal with issue sys.path.append(....)  how to get directory string without duplicating the function?
 - Create a deployment script for hatchet and code deployment to maximize robustness.
