--- a/TODO
+++ b/TODO
@@ -1,3 +1,44 @@
+Next:
+DONE - Fix Git on my computer: MacPatch messed up my computer really bad.
+DONE - edit functionality on FE
+    * DONE - load correct select dropdown.
+    * DONE - ensure that x-label and y-label are affected when changing them on scatterPlots
+    * DONE - show/hide delete button based on chart type
+DONE - delete functionality on FE
+DONE - check to see if we can do hovers for the horizontal bar value
+
+Next:
+- make sure dates have the year.
+- Help David deploy his stuff on dev on CZ and RZ.
+    * DONE - actual directory and perms is deployed
+    * still need to modify the actual templates, does stephanie do that or me?
+- Replace: cali_query_path = "/usr/gapps/spot/caliper-install/bin"
+
+- Set up an error message to popup if the user only has 1 file selected when clicking multiJupyter
+- Next: Suggest I work on integrating joe's persistence layer into the source code.
+- Do persistence for edits on the BE.
+
+
+- Encoding URL.
+
+- Next: Create a deployment script for deploying to live, that includes caliper/hatchet
+- Configuration popup for changing things like x-axis and yaxis
+    "UNIQUE_STR": 200, ->could be configurable for the popup.
+    "MAX_HOR_BAR_CHART_STR_LEN": 100 -> could be configurable for the popup.
+- Joe: URL for Jupyter needs to change?
+- Deal with issue sys.path.append(....)  how to get directory string without duplicating the function?
+- Create a deployment script for hatchet and code deployment to maximize robustness.
+- CmdLine - Set feature.
+    * We'll have to discuss how we break the command line into several parts.
+    * set feature for things like: hostlist, cmdline
+    * hidden fields.
+
+
+- Feature request for accessing
+
+
+
+
 DONE - spot.py and Templates/Template*.py are all pointing at live/templates and live/hatchet
     * not spot.py is a symbolic link to live/spot.py, for now.
 DONE - make "dev", or "live" specified in spot.py instead of hard coding it.
@@ -21,28 +62,8 @@ DONE - Fix git problems on RZ/CZ, check in spot.py changes
     * DONE - Rerun it after any kind of selection occurs
 DONE - Send matt the Venv location and commands: Don't need to because we're using lora.cgi to run the persistance layer
 
-Next:
-DONE - Fix Git on my computer: MacPatch messed up my computer really bad.
-DONE - make sure dates have the year.
-DONE - edit functionality on FE
-    * DONE - load correct select dropdown.
-    * DONE - ensure that x-label and y-label are affected when changing them on scatterPlots
-    * DONE - show/hide delete button based on chart type
-DONE - delete functionality on FE
-- check to see if we can do hovers for the horizontal bar value
-- Next: Create a deployment script for deploying to live, that includes caliper/hatchet
-- Next: Suggest I work on integrating joe's persistence layer into the source code.
-- Do persistence for edits on the BE.
-- Configuration popup for changing things like x-axis and yaxis
-    "UNIQUE_STR": 200, ->could be configurable for the popup.
-    "MAX_HOR_BAR_CHART_STR_LEN": 100 -> could be configurable for the popup.
-- Joe: URL for Jupyter needs to change?
-- Deal with issue sys.path.append(....)  how to get directory string without duplicating the function?
-- Create a deployment script for hatchet and code deployment to maximize robustness.
-- CmdLine - Set feature.
-    * We'll have to discuss how we break the command line into several parts.
-    * set feature for things like: hostlist, cmdline
-    * hidden fields.
+
+
 
 "# Add hatchet to PYTHONPATH\n",
     "sys.path.append('/usr/gapps/spot/dev/hatchet')\n",
