get chartname and save it in the new persistance implementation.
Former-commit-id: 42eefaff0cda4e531a280ab0d885300f16f2b8d6

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 Next:
+- check in the edit code, and the title loading fix.
+TEST - Do edit x-axis and y-axis persistance and name of chart
+Line 325 -> instead of getting from DOM get it from ST.layout_used
+    * where is this code.
 DONE - make sure dates have the year.
 DONE - Help David deploy his stuff on dev on CZ and RZ.
     * DONE - actual directory and perms is deployed
@@ -19,7 +23,6 @@ DONE - Integrate new persistance layer into existing functionality.
 DONE - Do delete persistance
 DONE - Do edit name of chart
 DONE - Add Chart make it use the new pers layer
-- Do edit x-axis and y-axis persistance
 
 
 Next:
