refactor sorting and push charts and insert charts in a way that guarantees order even when editing and deleting charts
Former-commit-id: 455c34b8b2b578ad4cd3dfe4837196aff5a0dcc5

--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ Next:
 - multiJupyter integrating for Joe's container.
 - maintain order consistency of the charts
     * right now when you edit a chart, the chart edited can appear in a new position
+    * turns out it was being ordered by UserPreferences.js Line 33.
 
 DONE - make sure dates have the year.
 DONE - Help David deploy his stuff on dev on CZ and RZ.
