--- a/TODO
+++ b/TODO
@@ -3,10 +3,10 @@ Next:
 - make Release script that copies directories (hatchet, caliper) from dev to live
     * first run git fetch, git pull on live dir.
 - multiJupyter integrating for Joe's container.
-- maintain order consistency of the charts
+
+DONE - maintain order consistency of the charts
     * right now when you edit a chart, the chart edited can appear in a new position
     * turns out it was being ordered by UserPreferences.js Line 33.
-
 DONE - make sure dates have the year.
 DONE - Help David deploy his stuff on dev on CZ and RZ.
     * DONE - actual directory and perms is deployed
