documentation and clean up
Former-commit-id: 2724066225d73bf2edbafa0c4c3d0998b82d6ec5

--- a/TODO
+++ b/TODO
@@ -1,20 +1,30 @@
 Next:
-- make spot-dev email list.
-- make sure errors show up okay.
-    * for example instead of having to check the debugger.
-    * but which errors?
-
-
-Next Release:
-- Spinner for MultiJupyter.
-- come up with hard coded "live" inside of spot.py
-    * or try to figure out dev/live based on where it's executing.
 DONE - make Release script that copies directories (hatchet, caliper) from dev to live
     * first run git fetch, git pull on live dir.
+DONE - fixed a command line error for output.
+DONE - isntead of come up with hard coded "live" inside of spot.py
+    * or try to figure out dev/live based on where it's executing.
+- make spot-dev email list.
+    * https://llnl.servicenowservices.com/ess?id=ticket&table=sc_req_item&sys_id=015312ac1b82d050774e657fe54bcb69&view=sp
+- Check Libraries:
+    - dc.js
+    - crossfilter
+    - plus any other javascript libraries
+    - check with matt to make sure they're okay.
+    - worried about images, all the things we're not thinking about.
 
 
+- martyMCF error
+    * 80 MB response!  Wow!
+    * error is somewhere in compare.js: graph.getData
 
-Next:
+Release process:
+- remember to change template notebook in live from dev/hatchet to live/hatchet
+
+Next Release:
+- Get rid of left margin now that we don't support left horiz bar chart anymore
+- reduce minimum width, so people with smaller screens don't have problems viewing
+- Spinner for MultiJupyter.
 - integrate Joe's code with mine.  Right now still working on minified code.
     * need to make this a priority.
 
